--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
 <div class="container">
 <div class="navbar-translate">
 <a class="navbar-brand" href="https://demos.creative-tim.com/paper-kit-2-pro/index.html" rel="tooltip" title="Paper Kit 2 PRO" data-placement="bottom" target="_blank">
-Paper Kit 2 Pro
+  Kabokweni Bible Baptist church
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-bar bar1"></span>
@@ -216,8 +216,8 @@ Twitter
 <div class="content-center">
 <div class="container">
 <div class="title-brand">
-<h1 class="presentation-title">Paper Kit 2</h1>
-<div class="type">PRO</div>
+<h1 class="presentation-title" style="font-size: 80px;">Kabokweni Bible Baptist Church</h1>
+<!-- <div class="type">PRO</div> -->
 <div class="fog-low">
 <img src="./Paper Kit Pro by Creative Tim_files/fog-low.webp" alt="">
 </div>
@@ -228,10 +228,8 @@ Twitter
 <h2 class="presentation-subtitle text-center">Make your mark with a premium Bootstrap 4 UI Kit! </h2>
 </div>
 </div>
-<h6 class="category category-absolute">Designed and coded by
-<a href="https://www.creative-tim.com/" target="_blank">
-<img src="./Paper Kit Pro by Creative Tim_files/creative-tim-white-slim2.webp" class="creative-tim-logo">
-</a>
+<h6 class="category category-absolute">God loves you
+
 </h6>
 </div>
 </div>
@@ -278,18 +276,18 @@ Twitter
 <div class="row">
 <div class="col-md-12 col-lg-6">
 <div class="image-container">
-<img class="components-macbook" src="./Paper Kit Pro by Creative Tim_files/laptop-basic.webp" alt="">
-<img class="table-img" src="./Paper Kit Pro by Creative Tim_files/table.jpg" alt="">
+<img class="components-macbook" src="/images/pic2.jpg" alt="">
+<!-- <img class="table-img" src="./Paper Kit Pro by Creative Tim_files/table.jpg" alt=""> -->
 <img class="share-btn-img" src="./Paper Kit Pro by Creative Tim_files/share-btn.webp" alt="">
-<img class="coloured-card-btn-img" src="./Paper Kit Pro by Creative Tim_files/coloured-card-with-btn.webp" alt="">
+<!-- <img class="coloured-card-btn-img" src="./Paper Kit Pro by Creative Tim_files/coloured-card-with-btn.webp" alt=""> -->
 <img class="coloured-card-img" src="./Paper Kit Pro by Creative Tim_files/coloured-card.webp" alt="">
-<img class="social-img" src="./Paper Kit Pro by Creative Tim_files/social-row.webp" alt="">
+<!-- <img class="social-img" src="./Paper Kit Pro by Creative Tim_files/social-row.webp" alt=""> -->
 <img class="pin-btn-img" src="./Paper Kit Pro by Creative Tim_files/pin-btn.webp" alt="">
 </div>
 </div>
 <div class="col-md-10 col-lg-4 ml-auto mr-auto">
 <div class="container basic-container">
-<h3 class="title">Basic Components</h3>
+<h3 class="title">About Our Ch</h3>
 <h6 class="category">The core elements of your website</h6>
 <h5 class="description">We re-styled every Bootstrap 4 element to match the Paper Kit style. All the Bootstrap 4 components that you need in a development have been re-design with the new look. Besides the numerous basic elements, we have
 also created additional classes. All these items will help you take your project to the next level.</h5>
