--- a/views/index.ejs
+++ b/views/index.ejs
@@ -239,29 +239,29 @@ Twitter
     <div class="col-md-4">
       <div class="info">
         <div class="icon icon-danger">
-          <i class="nc-icon nc-layout-11"></i>
+          <!-- <i class="nc-icon nc-layout-11"></i> -->
         </div>
         <div class="description">
-          <h4 class="info-title"> Welcoming Community </h4>
-          <p>Join a community that welcomes everyone with open hearts. Our church is a place where you can grow in faith and find support.</p>
+          <h4 class="info-title"> About Our Church </h4>
+          <p>At Long Island Baptist Church, we're building lives based on the principles of God's Word. Our goal is to share The Gospel of Jesus Christ to each individual we have the privilege to meet.</p>
         </div>
       </div>
     </div>
     <div class="col-md-4">
       <div class="info">
         <div class="icon icon-danger">
-          <i class="nc-icon nc-tile-56"></i>
+          <!-- <i class="nc-icon nc-tile-56"></i> -->
         </div>
         <div class="description">
-          <h4 class="info-title"> Diverse Ministries </h4>
-          <p>Our church offers a variety of ministries for all ages and interests. From youth groups to outreach programs, there's a place for everyone to get involved.</p>
+          <h4 class="info-title">How Can I Be Saved? </h4>
+          <p>Life is full of questions. Some are trivial, some more serious and some tremendously important. But the greatest question you will face is: How can I be saved?  God and your relationship to Him is the most important thing in life.</p>
         </div>
       </div>
     </div>
     <div class="col-md-4">
       <div class="info">
         <div class="icon icon-danger">
-          <i class="nc-icon nc-paper"></i>
+          <!-- <i class="nc-icon nc-paper"></i> -->
         </div>
         <div class="description">
           <h4 class="info-title"> Inspiring Worship </h4>
@@ -277,7 +277,7 @@ Twitter
 <div class="row">
 <div class="col-md-12 col-lg-6">
 <div class="image-container">
-<img class="components-macbook" src="/images/pic2.jpg" alt="">
+<img class="components-macbook" src="/images/12.jpg" alt="">
 <!-- <img class="table-img" src="./Paper Kit Pro by Creative Tim_files/table.jpg" alt=""> -->
 <img class="share-btn-img" src="./Paper Kit Pro by Creative Tim_files/share-btn.webp" alt="">
 <!-- <img class="coloured-card-btn-img" src="./Paper Kit Pro by Creative Tim_files/coloured-card-with-btn.webp" alt=""> -->
@@ -386,16 +386,16 @@ the Paper Kit style principles and have a design that stands out. </h5>
   </div>
   </div>
   </div> -->
-<!--   
+  
 <div class="section section-sections section-gray">
 <div class="container">
 <div class="col-md-8 ml-auto mr-auto">
 <div class="section-description text-center">
 <h2 class="title">Sections you will love</h2>
-<h5 class="description"> Build pages in no time using pre-made sections! We have created multiple sections for you to put together and customise into pixel perfect example pages. From headers to footers, you will be able to choose the best
+<h5 class="description" style="display: none;"> Build pages in no time using pre-made sections! We have created multiple sections for you to put together and customise into pixel perfect example pages. From headers to footers, you will be able to choose the best
 combination for your project.</h5>
 <br>
-<a href="https://demos.creative-tim.com/paper-kit-2-pro/sections.html" target="_blank" class="btn btn-rose btn-round">View All Sections</a>
+<!-- <a href="https://demos.creative-tim.com/paper-kit-2-pro/sections.html" target="_blank" class="btn btn-rose btn-round">View All Sections</a> -->
 </div>
 </div>
 </div>
@@ -404,47 +404,47 @@ combination for your project.</h5>
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/header-1.jpg" alt="">
+<img src="/images/1.jpg" alt="">
 </div>
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/header-2.jpg" alt="">
+<img src="/images/2.jpg" alt="">
 </div>
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/header-3.jpg" alt="">
+<img src="/images/3.jpg" alt="">
 </div>
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/header-4.jpg" alt="">
+<img src="/images/4.jpg" alt="">
 </div>
 </div>
 <div class="row">
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/team-cards-social.jpg" alt="">
+<img src="/images/5.jpg" alt="">
 </div>
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/bg-pricing-card.jpg" alt="">
+<img src="/images/6.jpg" alt="">
 </div>
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/white-pricing-card.jpg" alt="">
+<img src="/images/8.jpg" alt="">
 </div>
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/team-member-card.jpg" alt="">
+<img src="/images/9.jpg" alt="">
 </div>
 </div>
 <div class="row">
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/testimonials-1.jpg" alt="">
+<img src="/images/10.jpg" alt="">
 </div>
 <div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/blog-bg-cards.jpg" alt="">
+<img src="/images/11.jpg" alt="">
 </div>
-<div class="col-md-3">
-<img src="./Paper Kit Pro by Creative Tim_files/our-products.jpg" alt="">
+<!-- <div class="col-md-3">
+<img src="/images/12.jpg" alt="">
 </div>
 <div class="col-md-3">
 <img src="./Paper Kit Pro by Creative Tim_files/projects-cards.jpg" alt="">
 </div>
-</div>
-<div class="row">
+</div> -->
+<!-- <div class="row">
 <div class="col-md-3">
 <img src="./Paper Kit Pro by Creative Tim_files/blogpost-cards.jpg" alt="">
 </div>
@@ -457,12 +457,12 @@ combination for your project.</h5>
 <div class="col-md-3">
 <img src="./Paper Kit Pro by Creative Tim_files/team-3.jpg" alt="">
 </div>
+</div> -->
 </div>
 </div>
 </div>
 </div>
-</div>
-<div class="section section-examples section-dark" id="examples">
+<!-- <div class="section section-examples section-dark" id="examples">
 <div class="container">
 <div class="row">
 <div class="title text-center">
@@ -627,8 +627,8 @@ Ecommerce Page
 </div>
 </div>
 </div>
-</div>
-<div class="section section-icons">
+</div> -->
+<!-- <div class="section section-icons">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-3">
@@ -671,8 +671,8 @@ Paper Kit 2 PRO. Make sure you check all of them and use those that you like the
 </div>
 </div>
 </div>
-</div>
-<div class="section section-free-demo section-dark" style="display: none">
+</div> -->
+<!-- <div class="section section-free-demo section-dark" style="display: none">
 <div class="container">
 <div class="row">
 <div class="col-md-5">
@@ -736,8 +736,8 @@ code. Get it free on GitHub!</h5>
 </div>
 </div>
 </div>
-</div>
-<div class="section section-responsive section-gold">
+</div> -->
+<!-- <div class="section section-responsive section-gold">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-6">
@@ -767,9 +767,9 @@ code. Get it free on GitHub!</h5>
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
-<div class="section section-testimonials">
+<!-- <div class="section section-testimonials">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-8 ml-auto mr-auto text-center">
@@ -889,7 +889,7 @@ code. Get it free on GitHub!</h5>
 </div>
 </div>
 </div>
-</div> -->
+</div>
 <div class="our-clients">
 <div class="container">
 <div class="row justify-content-center">
@@ -908,7 +908,7 @@ code. Get it free on GitHub!</h5>
 </div>
 </div>
 </div>
-</div>
+</div> -->
 <!-- <div class="section section-sharing section-dark" id="demoPay">
 <div class="container">
 <div class="row">
@@ -983,16 +983,14 @@ For business projects, multiple websites for clients or for creating themes wher
 <div class="row">
 <nav class="footer-nav">
 <ul>
-<li><a href="https://www.creative-tim.com/" target="_blank">Creative Tim</a></li>
-<li><a href="http://blog.creative-tim.com/" target="_blank">Blog</a></li>
-<li><a href="https://www.creative-tim.com/license" target="_blank">Licenses</a></li>
+
 </ul>
 </nav>
 <div class="credits ml-auto">
 <span class="copyright">
-© <script>
+ <script>
               document.write(new Date().getFullYear())
-            </script> made with <i class="fa fa-heart heart"></i> Daniel Slinda
+            </script> made with <i class="fa fa-heart heart"></i> 
 </span>
 </div>
 </div>
@@ -1403,11 +1401,6 @@ For business projects, multiple websites for clients or for creating themes wher
   }
 </style>
 
-<script type="text/javascript" id="">function setCookie(a,d,c){var b=new Date;b.setTime(b.getTime()+864E5*c);c="expires\x3d"+b.toUTCString();document.cookie=a+"\x3d"+d+";"+c+";path\x3d/"}
-function readDomain(){domain=window.location.hostname;if("hrm.newflex.co.kr"==domain){console.log("Remove the script");var a=document.createElement("div");a.setAttribute("id","pls-contact-me-on-email");a.innerHTML="\x3ch1\x3ePlease Remove the Stolen Google Analytics from \x3ca href\x3d'https://www.creative-tim.com/?ref\x3dstolen-website' target\x3d'_blank' '\x3ecreative-tim.com\x3c/a\x3e Please send an email to beni@creative-tim.com to help you remove our scripts.\x3c/h1\x3e";document.body.insertBefore(a,
-document.body.firstChild)}}function readCookie(a){a+="\x3d";for(var d=document.cookie.split(";"),c=0;c<d.length;c++){for(var b=d[c];" "==b.charAt(0);)b=b.substring(1,b.length);if(0==b.indexOf(a))return b.substring(a.length,b.length)}return null}
-function createOfferBar(){readDomain();var a=document.createElement("div");a.setAttribute("id","ofBar");a.innerHTML="\x3cdiv id\x3d'ofBar-logo'\x3e \x3cimg alt\x3d'creative-tim-logo' src\x3d'https://s3.amazonaws.com/creativetim_bucket/static-assets/logo-ct-black.png'\x3e\x3c/div\x3e\x3cdiv id\x3d'ofBar-content'\x3e\x3cb\x3e50% off Creative Tim Club!\x3c/b\x3e \ud83c\udf89 Lifetime access to all current \x26 future products. Limited time offer! \u2728\x3c/div\x3e\x3cdiv id\x3d'ofBar-right'\x3e\x3ca href\x3d'https://www.creative-tim.com/club?ref\x3dct-demos' target\x3d'_blank' id\x3d'btn-bar'\x3eView Offer\x3c/a\x3e\x3ca id\x3d'close-bar'\x3e\u00d7\x3c/a\x3e\x3c/div\x3e";document.body.insertBefore(a,
-document.body.firstChild)}function closeOfferBar(){document.getElementById("ofBar").setAttribute("style","display:none");setCookie("view_offer_bar","true",1)}var value=readCookie("view_offer_bar");null==value&&(createOfferBar(),document.getElementById("close-bar").addEventListener("click",closeOfferBar));</script>
-	<script type="text/javascript" id="">!function(d,g,e){d.TiktokAnalyticsObject=e;var a=d[e]=d[e]||[];a.methods="page track identify instances debug on off once ready alias group enableCookie disableCookie".split(" ");a.setAndDefer=function(b,c){b[c]=function(){b.push([c].concat(Array.prototype.slice.call(arguments,0)))}};for(d=0;d<a.methods.length;d++)a.setAndDefer(a,a.methods[d]);a.instance=function(b){b=a._i[b]||[];for(var c=0;c<a.methods.length;c++)a.setAndDefer(b,a.methods[c]);return b};a.load=function(b,c){var f="https://analytics.tiktok.com/i18n/pixel/events.js";
-a._i=a._i||{};a._i[b]=[];a._i[b]._u=f;a._t=a._t||{};a._t[b]=+new Date;a._o=a._o||{};a._o[b]=c||{};c=document.createElement("script");c.type="text/javascript";c.async=!0;c.src=f+"?sdkid\x3d"+b+"\x26lib\x3d"+e;b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(c,b)};a.load("CC6UAQBC77U7GVKHLC4G");a.page()}(window,document,"ttq");</script>
+
+	
 	</body><iframe id="__JSBridgeIframe_1.0__" title="jsbridge___JSBridgeIframe_1.0__" style="display: none;" src="./Paper Kit Pro by Creative Tim_files/saved_resource.html"></iframe><iframe id="__JSBridgeIframe_SetResult_1.0__" title="jsbridge___JSBridgeIframe_SetResult_1.0__" style="display: none;" src="./Paper Kit Pro by Creative Tim_files/saved_resource(1).html"></iframe><iframe id="__JSBridgeIframe__" title="jsbridge___JSBridgeIframe__" style="display: none;" src="./Paper Kit Pro by Creative Tim_files/saved_resource(2).html"></iframe><iframe id="__JSBridgeIframe_SetResult__" title="jsbridge___JSBridgeIframe_SetResult__" style="display: none;" src="./Paper Kit Pro by Creative Tim_files/saved_resource(3).html"></iframe></html>
