--- a/views/index.ejs
+++ b/views/index.ejs
@@ -281,7 +281,7 @@ Twitter
 <!-- <img class="table-img" src="./Paper Kit Pro by Creative Tim_files/table.jpg" alt=""> -->
 <img class="share-btn-img" src="./Paper Kit Pro by Creative Tim_files/share-btn.webp" alt="">
 <!-- <img class="coloured-card-btn-img" src="./Paper Kit Pro by Creative Tim_files/coloured-card-with-btn.webp" alt=""> -->
-<img class="coloured-card-img" src="./Paper Kit Pro by Creative Tim_files/coloured-card.webp" alt="">
+<!-- <img class="coloured-card-img" src="./Paper Kit Pro by Creative Tim_files/coloured-card.webp" alt=""> -->
 <!-- <img class="social-img" src="./Paper Kit Pro by Creative Tim_files/social-row.webp" alt=""> -->
 <img class="pin-btn-img" src="./Paper Kit Pro by Creative Tim_files/pin-btn.webp" alt="">
 </div>
