--- a/views/index.ejs
+++ b/views/index.ejs
@@ -243,7 +243,7 @@ Twitter
         </div>
         <div class="description">
           <h4 class="info-title"> About Our Church </h4>
-          <p>At Long Island Baptist Church, we're building lives based on the principles of God's Word. Our goal is to share The Gospel of Jesus Christ to each individual we have the privilege to meet.</p>
+          <p>At Kabokweni Baptist Church, we're building lives based on the principles of God's Word. Our goal is to share The Gospel of Jesus Christ to each individual we have the privilege to meet.</p>
         </div>
       </div>
     </div>
